# KVMemo

./: CMakeLists.txt  CONTRIBUTING.md  Command.md  README.MD  test_concurrency  test_kv
docs/: BENCHMARKS.md  KV_MEMO.md  LLD.md  PROTOCOL.md
finance-backend/: .env.example  README.md  package-lock.json  package.json
finance-backend/src/: app.js
finance-backend/src/db/: database.js  seed.js
finance-backend/src/middleware/: auth.js  errorHandler.js  validate.js
finance-backend/src/routes/: auth.js  dashboard.js  records.js  users.js
finance-backend/src/services/: authService.js  dashboardService.js  recordService.js  userService.js
finance-backend/src/validators/: auth.js  records.js  users.js
finance-backend/tests/: api.test.js
src/: main.cpp
src/client/: kv_cli.cpp  kv_client.h
src/core/: entry.h  kv_engine.h  shard.h  shard_manager.h
src/eviction/: eviction_manager.h  memory_tracker.h  ttl_manager.h
src/metrics/: latency_tracker.h  metrics_registry.h
src/net/: connection.h  connection_manager.h  tcp_server.h
src/protocol/: buffer.h  framing.h  serializer.h
src/server/: command_handler.h  command_registry.h  dispatcher.h  request_context.h  server_app.h  thread_pool.h
tests/: test_concurrency.cpp  test_kv.cpp
